# mulchcli

./: .coverage  .gitattributes  .gitignore  README.md  idle.ps1  pyproject.toml  run_tests.py  run_tests2.py
docs/: chatgpt_checkpoint0.md  discourse_overview_chatgpt_pavlovian_architecture.json  end-of-day-21April2025.json  mulchcli_0-60.pdf.md  mulchcli_config_example.toml  mulchcli_overview.json  mulchcli_project_summary.json  mulchcli_project_summary.md  publish.ps1  tests.md
mulchcli/: __main__.py  cli.py
mulchcli/commands/: config.py  init.py  list_projects.py
tests/: test_cli.py  test_config.py  test_edge_cases.py
tests/logs/: pytest_20250421_152227.md  pytest_20250421_155214.md  pytest_21April2025.txt
