[project]
name = "mulchcli"
version = "0.1.0"
description = "A modular CLI tool for bootstrapping and managing multi-project configurations."
authors = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8,<9.0.0"
]

[project.scripts]
mulchcli = "mulchcli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
